deployments/ingress.yml
---
  apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
      name: go-cloud
      annotations:
          ingress.bluemix.net/redirect-to-https: "True"
  spec:
      tls:
      - hosts:
          - <ibm-provided-tls-ingress-subdomain>
        secretName: <ibm-provided-tls-ingress-secret>
      rules:
      - host: <ibm-provided-tls-ingress-subdomain>
        http:
          paths:
          - path: /
            backend:
              serviceName: go-cloud
              servicePort: 80
